--- a/ToDoApi/appsettings.Development.json
+++ b/ToDoApi/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    // "TodoListConnectionString": "Server=(localdb)\\mssqllocaldb;Database=TodoList"
-    "TodoListConnectionString": "server=localhost; database=TodoList;User Id=sa; password=MariaF22; TrustServerCertificate=True"
+    "TodoListConnectionString": "Server=(localdb)\\mssqllocaldb;Database=TodoList"
+    //"TodoListConnectionString": "server=localhost; database=TodoList;User Id=sa; password=MariaF22; TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
